--- a/_posts/2016-06-24-WPCD-0100.md
+++ b/_posts/2016-06-24-WPCD-0100.md
@@ -22,6 +22,7 @@ categories: [WhitePowder]
 
 > ブランド ：WhitePowder
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xnB8dU1eZUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 | トラック  |                    曲名                          |   アーティスト   |
 | ------   | :-----------:                                    | -----:     |
