--- a/_posts/2016-06-24-WPCD-0100.md
+++ b/_posts/2016-06-24-WPCD-0100.md
@@ -6,7 +6,7 @@ categories: [WhitePowder]
 
 # LAMUNATION! VOCAL COLLECTION
 
-![Cover](cover.jpg)
+![Cover](WPCD-0100-Cover.jpg)
 
 > カタログ番号：WPCD-0100
 
@@ -33,7 +33,7 @@ categories: [WhitePowder]
 
 ---
 ## ダウンロード
-> ファイル形式：[EAC] wav+cue+log
+> ファイル形式：[EAC] wav+cue+log+rr3
 
   - **BaiduDisk**
 
