--- a/_posts/2016-06-24-WPCD-0100.md
+++ b/_posts/2016-06-24-WPCD-0100.md
@@ -6,7 +6,7 @@ categories: [WhitePowder]
 
 # LAMUNATION! VOCAL COLLECTION
 
-![Cover](WPCD-0100-Cover.jpg)
+![WPCD-0100](WPCD-0100-Cover.jpg)
 
 > カタログ番号：WPCD-0100
 
