--- a/_posts/2020-09-15-NDR-004.md
+++ b/_posts/2020-09-15-NDR-004.md
@@ -6,7 +6,7 @@ categories: [きゃべつそふと]
 
 # さくらの雲＊スカアレットの恋 コンプリートサウンドアルバム
 
-![Cover](NDR-004-Cover.jpg)
+![NDR-004](NDR-004-Cover.jpg)
 
 > カタログ番号：NDR-004
 
@@ -30,25 +30,25 @@ categories: [きゃべつそふと]
 | 04 | 爛漫のおとり | 藤井稿太郎 |
 | 05 | かく咲きたらばいと恋ひめやも | 藤井稿太郎 |
 | 06 | Modern Romanesque | 藤井稿太郎 |
-| 08 | 迷宮止水 | 藤井稿太郎 |
-| 09 | からくり百景 | 藤井稿太郎 |
-| 10 | Tension Reduction | 藤井稿太郎 |
-| 11 | 狐狗狸化灯籠 | 藤井稿太郎 |
-| 12 | Face the Music | 藤井稿太郎 |
-| 13 | 人魔天中殺 | 藤井稿太郎 |
-| 14 | The game is afoot! | 藤井稿太郎 |
-| 15 | Scarlet Frontline | 藤井稿太郎 |
-| 16 | リュウノヒゲ | 藤井稿太郎 |
-| 17 | ゑだわたり | 藤井稿太郎 |
-| 18 | Nostalgia | 藤井稿太郎 |
-| 19 | JUGGERNAUT | 藤井稿太郎 |
-| 20 | 春の夜の夢 | 藤井稿太郎 |
-| 21 | 掴み取る未来 | 藤井稿太郎 |
-| 22 | Sacralet | 藤井稿太郎 |
-| 23 | 雨露とビードロ | KyoKa |
-| 24 | 雨露とビードロ (オフボーカル版) | 藤井稿太郎 |
-| 25 | 比翼のさくら | 逢瀬アキラ |
-| 26 | 比翼のさくら (オフボーカル版) | 藤井稿太郎 |
+| 07 | 迷宮止水 | 藤井稿太郎 |
+| 08 | からくり百景 | 藤井稿太郎 |
+| 09 | Tension Reduction | 藤井稿太郎 |
+| 10 | 狐狗狸化灯籠 | 藤井稿太郎 |
+| 11 | Face the Music | 藤井稿太郎 |
+| 12 | 人魔天中殺 | 藤井稿太郎 |
+| 13 | The game is afoot! | 藤井稿太郎 |
+| 14 | Scarlet Frontline | 藤井稿太郎 |
+| 15 | リュウノヒゲ | 藤井稿太郎 |
+| 16 | ゑだわたり | 藤井稿太郎 |
+| 17 | Nostalgia | 藤井稿太郎 |
+| 18 | JUGGERNAUT | 藤井稿太郎 |
+| 19 | 春の夜の夢 | 藤井稿太郎 |
+| 20 | 掴み取る未来 | 藤井稿太郎 |
+| 21 | Sacralet | 藤井稿太郎 |
+| 22 | 雨露とビードロ | KyoKa |
+| 23 | 雨露とビードロ (オフボーカル版) | 藤井稿太郎 |
+| 24 | 比翼のさくら | 逢瀬アキラ |
+| 25 | 比翼のさくら (オフボーカル版) | 藤井稿太郎 |
 
 
 ---
