--- a/_posts/2021-09-24-HBDC-739.md
+++ b/_posts/2021-09-24-HBDC-739.md
@@ -39,5 +39,5 @@ categories: [HULOTTE]
 
   - **BaiduDisk**
 
-    - [リンク](https://pan.baidu.com/s/1e7-4S_oGi34hxogMt06JnQ)
-    - パスワード：bg35
+    - [リンク](https://pan.baidu.com/s/1XnIHuNRv0Lu9uX7D94wcyA)
+    - パスワード：r8tp
