post edit and upload

--- a/_posts/2021-12-27-dengekimoeoh-2022-02.md
+++ b/_posts/2021-12-27-dengekimoeoh-2022-02.md
@@ -6,18 +6,24 @@ categories: [角川書店]
 
 # 電撃萌王 2022年2月号
 
-![dengekimoeoh-2022-02-Cover.jpg](dengekimoeoh-2022-02-Cover.jpg)
+![dengekimoeoh-2022-02](dengekimoeoh-2022-02-Cover.jpg)
 
 
 > 発売日：2021年12月27日
 
 > 発行形式：コマーシャル
 
-> 発売価格：1370円 （税込）
+> 発売価格：1370円（税込）
 
-> 出版社：ＫＡＤＯＫＡＷＡ
+> 出版社：KADOKAWA
 
-> 判型：Ａ４判
+> 判型：A4変形判
+
+> 商品形態：雑誌
+
+> ページ数：140
+
+> 雑誌コード：1636702
 
 ---
 ## ダウンロード
