--- a/_posts/2021-05-28-HLSU.md
+++ b/_posts/2021-05-28-HLSU.md
@@ -24,7 +24,7 @@ categories: [フェイバリット]
 
 | トラック | 曲名 | アーティスト |
 | ------| :-----------: | -----: |
-| 01 | MAGICAL∞SHOWTIME!! | 鈴湯&山本美禰子 |
+| 01 | MAGICAL∞SHOWTIME!! | 鈴湯∞山本美禰子 |
 | 02 | 太陽のはじまり | 忍 |
 | 03 | アルペジオに奏でる福音 | 忍 |
 | 04 | 可愛的ジャグラー | 忍 |
