correct errors and update some album

--- a/_posts/2017-01-27-AUG-1810-11~3.md
+++ b/_posts/2017-01-27-AUG-1810-11~3.md
@@ -6,7 +6,7 @@ categories: [オーガスト]
 
 # 千の刃濤、桃花染の皇姫 Original Sound Track
 
-![AUG-1810-11~3.](AUG-1810-11~3-Cover.jpg)
+![AUG-1810-11~3](AUG-1810-11~3-Cover.jpg)
 
 > カタログ番号：AUG-1810-11~3
 
@@ -20,7 +20,7 @@ categories: [オーガスト]
 
 > ジャンル：オリジナルサウンドトラック
 
-> ブランド ：オーガスト
+> ブランド：オーガスト
 
 
 | トラック | 曲名 | アーティスト |
